--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cornerstonejs/core": "^3.20.2",
     "@cornerstonejs/dicom-image-loader": "^3.20.2",
     "@cornerstonejs/tools": "^3.20.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.10",
